[workspace]
members = [
  "crates/*",
  "primitives",
#  "parachain",
#  "parachain/runtime",
#  "standalone",
#  "standalone/runtime",
  "rpc",
]

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-vesting = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "polkadot-v0.9.10" }
orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "polkadot-v0.9.10" }
orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "polkadot-v0.9.10" }
orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "polkadot-v0.9.10" }

#resolver = "2"

# disable incremental compilation to work around a compiler bug.
# See https://blog.rust-lang.org/2021/05/10/Rust-1.52.1.html
# When we upgrade compiler versions, we may be able to reenable incremental.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
incremental = false