[package]
authors = ["Interlay Ltd"]
edition = "2018"
name = "interbtc-rpc"
version = "1.1.0"

[dependencies]
jsonrpc-core = "15.1.0"

# Parachain dependencies
module-btc-relay-rpc = { path = "../crates/btc-relay/rpc" }
#module-oracle-rpc = { path = "../crates/oracle/rpc" }
module-relay-rpc = { path = "../crates/relay/rpc" }
#module-vault-registry-rpc = { path = "../crates/vault-registry/rpc" }
#module-issue-rpc = { path = "../crates/issue/rpc" }
#module-redeem-rpc = { path = "../crates/redeem/rpc" }
#module-replace-rpc = { path = "../crates/replace/rpc" }
#module-refund-rpc = { path = "../crates/refund/rpc" }

#vault-registry = { path = "../crates/vault-registry" }
primitives = { package = "interbtc-primitives", path = "../primitives" }

# Substrate dependencies
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
